<resources>
    <string name="app_name">Key Conservation</string>
    <string name="i_want_to_help">I want to help</string>
    <string name="my_organization_needs_help">My Organization Needs Help</string>
    <string name="select_one">Select One:</string>
    <string name="com_auth0_client_id">elyo5qK7vYReEsKAPEADW2T8LAMpIJaf</string>
    <string name="com_auth0_domain">https://auth.expo.io</string>
    <string name="banner_image">banner_image</string>
    <string name="username">USERNAME</string>
    <string name="location">LOCATION</string>
    <string name="event_name">EVENT NAME</string>
    <string name="event_description">EVENT DESCRIPTION</string>
    <string name="post_date">POST DATE</string>
    <string name="flag_for_review">Flag for Review</string>
    <string name="empty" />
    <string name="campaign_title">Campaign Title:</string>
    <string name="is_this_an_update_urgent_or_new_post">Is this an Update, Urgent or new Post?</string>
    <string name="date">Date</string>
    <string name="post_campaign">Post Campaign</string>
    <string name="image_url">Image URl</string>
    <string name="post_description">Post Description</string>
    <string name="event_name_eg_saving_turtles_planting_trees">Event Name: eg: saving turtles, planting trees</string>
    <string name="mini_bio">Mini Bio</string>
    <string name="species_and_habitats">Species and habitats</string>
    <string name="title_activity_maps">Map</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="paused">Paused…</string>
    <string name="playing">Playing…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tap_for_title_or_hold_for_event">tap for title, or hold for event</string>
    <string name="on1">Just after brief overview and process you will be on your way to creating your own custom page for your organization</string>
    <string name="on2">Help tackle projects that need specialized skills by connecting your organization with professionals who want to make a difeerence.  \nGain global support for unplanned events for long and short term goals to help you achieve your overall mission.  \nProvide a way to connect with local communities and visitors about realtime events and ways to get involved.</string>
    <string name="on4">Complete your base profile then update your profile for review. Once approved, you will receive a survey by email following by welcome kit. You can start using the app right of way. Start adding your campaigns!</string>
    <string name="on5">Let\'s set up the account! You\'ll need to fill out an initial form, upload your credentials, and set up the profile on following screens</string>
    <string name="on6">Now that you know how we can help your organization with individual contributors. Thats why we re here. Lets keep it brief.</string>


</resources>
