<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageview_profilepicture"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:adjustViewBounds="false"
                android:background="@drawable/my_shape"
                app:layout_constraintEnd_toStartOf="@+id/textview_username"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintBottom_toTopOf="@+id/textview_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.411"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                app:layout_constraintBottom_toBottomOf="@+id/imageview_profilepicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.357"
                app:layout_constraintStart_toStartOf="@+id/imageview_profilepicture"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.823" />

            <ImageView
                android:id="@+id/imageView_bannerimage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/banner_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_location"
                app:layout_constraintVertical_bias="0.046"
                tools:layout_editor_absoluteX="0dp" />

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView

                android:id="@+id/myEXo"
                android:layout_width="match_parent"
                android:layout_height="199dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_bannerimage"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/textview_eventname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                app:layout_constraintBottom_toTopOf="@id/textview_eventdescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myEXo"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textview_eventdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myEXo"
                app:layout_constraintVertical_bias="0.226" />

            <TextView
                android:id="@+id/textview_eventdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/myEXo"
                app:layout_constraintVertical_bias="0.809" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>