<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mAddPlaceLayout"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_lon_camp"
        android:layout_width="173dp"
        android:layout_height="67dp"
        android:layout_margin="8dp"
        android:visibility="invisible"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterMaxLength="12"

        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_property_add"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_event_description"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="lon"
            android:inputType="numberDecimal"
            android:visibility="invisible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_lat_camp"
        android:layout_width="173dp"
        android:layout_height="67dp"
        android:layout_margin="8dp"
        android:visibility="invisible"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterMaxLength="12"

        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_property_add"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_event_description"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="lat"
            android:inputType="numberDecimal"
            android:visibility="invisible" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/view_image"
        android:layout_width="149dp"
        android:layout_height="114dp"
        android:src="@drawable/add_icon"
        app:layout_constraintBottom_toTopOf="@+id/view_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toEndOf="@+id/view_event_image_layout"
        app:layout_constraintTop_toBottomOf="@+id/view_textLocation"
        app:layout_constraintVertical_bias="0.421" />

    <TextView
        android:id="@+id/tv_add_property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Campaign"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_textTitle"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_property">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/campaign_title" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/view_status"
        android:layout_width="379dp"
        android:layout_height="44dp"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_textTitle">

        <Spinner
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/is_this_an_update_urgent_or_new_post" />
        <TextView
            android:visibility="invisible"
            android:id="@+id/spinnertext_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/is_this_an_update_urgent_or_new_post" />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_textLocation"
        android:layout_width="374dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_status">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_created_at"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_margin="8dp"
        android:layout_marginTop="280dp"
        app:boxBackgroundColor="@color/design_default_color_background"
        app:counterMaxLength="12"

        app:errorEnabled="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_textLocation">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_event_image_layout"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_margin="8dp"

        android:layout_marginTop="24dp"
        app:boxBackgroundColor="@color/design_default_color_background"

        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_created_at">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/view_event_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/image_url"
            android:inputType="text" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_event_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"

        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"

        app:layout_constraintTop_toBottomOf="@+id/view_event_image_layout"
        tools:layout_editor_absoluteX="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/event_name_eg_saving_turtles_planting_trees"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/view_event_description"
        android:layout_width="371dp"
        android:layout_height="119dp"
        android:layout_margin="8dp"

        app:boxBackgroundColor="@color/design_default_color_background"
        app:errorEnabled="true"

        app:layout_constraintBottom_toTopOf="@+id/btn_property_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_event_name"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:hint="@string/post_description"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:background="@color/colorPrimaryDark"
        android:padding="16dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btn_property_add"
        android:text="@string/post_campaign"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ProgressBar
        android:id="@+id/pb_add_property"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>