<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:src="@drawable/key_full_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="UPDATE"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.012"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/view_profilepicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:layout_toStartOf="@+id/imagebutton_facebbok">

        </ImageView>

        <TextView
            android:id="@+id/textConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="66dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="137dp"
            android:layout_marginBottom="81dp"
            android:text="connect" />

        <ImageButton
            android:id="@+id/imagebutton_facebbok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/imagebutton_twitter"
            android:background="@color/grey"
            android:src="@drawable/facebook_icon" />

        <ImageButton
            android:id="@+id/imagebutton_twitter"
            android:layout_width="49dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            android:layout_toStartOf="@+id/imagebutton_instagram"
            android:src="@drawable/twitter_icon" />

        <ImageButton
            android:id="@+id/imagebutton_instagram"
            android:layout_width="48dp"
            android:layout_height="49dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="15dp"

            android:layout_marginBottom="19dp"
            android:layout_toStartOf="@+id/imagebutton_email"
            android:src="@drawable/instagram_icon" />

        <ImageButton
            android:id="@+id/imagebutton_email"
            android:layout_width="52dp"
            android:layout_height="49dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/email_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="272dp"
        android:background="@color/white"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.056"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:layout_width="212dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="29dp"
            android:layout_marginEnd="174dp"
            android:text="@string/location" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.236"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/minibio"
            android:layout_width="212dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="199dp"
            android:text="@string/mini_bio" />

        <TextView
            android:id="@+id/view_minibio"
            android:layout_width="340dp"
            android:layout_height="118dp"
            android:layout_below="@+id/minibio"
            android:layout_alignParentStart="true"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="35dp"
            android:text="@string/mini_bio" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.743"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/species"
            android:layout_width="212dp"
            android:layout_height="27dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="199dp"
            android:text="@string/species_and_habitats" />

        <TextView
            android:id="@+id/view_species"
            android:layout_width="340dp"
            android:layout_height="118dp"
            android:layout_below="@+id/species"
            android:layout_alignParentStart="true"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="47dp"
            android:layout_marginBottom="35dp"
            android:text="@string/species_and_habitats" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>